--- a/index.html
+++ b/index.html
@@ -10,23 +10,15 @@
   <link rel="stylesheet" href="style.css"/>
   <script src="script.js"></script>
 </head>
-<style>
-    body{
-        font-family: Roboto,Arial;
-        background-color: rgb(65, 65, 65);
-        color: #fff;
-        margin: 15px;
-    }
-</style>
 <body>
 
 
   <div class="title-container">
-    <img src="images/sudoku-icon.png" alt="Sudoku Icon" class="game-icon" />
     <div class="title-text">
-      <h1>Sudoku Master</h1>
-      <div class="subtitle">Sharpen Your Mind, one grid at a time!</div>
+      <img src="images/sudoku-icon.png" alt="Sudoku Icon" class="game-icon" />
+      <h1>Sudoku Puzzle</h1>
     </div>
+    <div class="subtitle">Sudoku: The Game of Brilliant Minds</div>
   </div>
 
 
